@@ -29,7 +29,7 @@ Extra-Source-Files:
 
 executable hlint
     build-depends:
-        base == 4.*, syb, filepath, directory, mtl, containers, hscolour >= 1.10,
+        base == 4.*, syb, filepath, directory, mtl, containers, hscolour >= 1.10, cpphs >= 1.7,
         haskell-src-exts == 1.1.*, uniplate == 1.2.* && >= 1.2.0.2, parallel
 
     ghc-options:        -fno-warn-overlapping-patterns -threaded
